Adapt routes, forms, templates to db model change: FertilizationForm: - add fall_violation from Field business model as comment WIP Routes: - change api routes for crop and fertilizer to accept kwargs as request.args

--- a/app/templates/crops.html
+++ b/app/templates/crops.html
@@ -72,7 +72,7 @@
             {{ crop.target_yield }}
           </td>
           <td>
-            {{ "{}, {}".format(crop.var_yield[0], crop.var_yield[1]) }}
+            {{ "{}, {}".format(crop.pos_yield, crop.neg_yield) }}
           </td>
           <td>
             {{ crop.target_protein }}
