Change edit button to be displayed on hover

--- a/app/templates/crops.html
+++ b/app/templates/crops.html
@@ -111,7 +111,7 @@
             {{ crop.byp_mgo }}
           </td>
           <td class="table-action d-print-none">
-            <button class="btn btn-link p-0"
+            <button class="btn btn-link btn-edit"
                     type="button"
                     data-bs-toggle="modal"
                     data-bs-target="#modal"
