--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -40,6 +40,7 @@ main {
 .table-action {
   white-space: nowrap;
   width: 1em;
+  padding: 0 !important;
 }
 
 .no-border-top {
@@ -60,6 +61,32 @@ main {
 
 .bg-green {
   background-color: var(--bs-green) !important;
+}
+
+/* edit button hover  */
+.btn-edit {
+  display: none;
+  padding: 0 !important;
+}
+
+tr:hover .btn-edit {
+  display: inline-block;
+}
+
+/* accordion styling */
+.accordion-button:not(.collapsed) {
+  color: inherit;
+  background-color: inherit;
+  box-shadow: none;
+}
+
+.accordion-button:not(.collapsed)::after {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23212529'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+}
+
+.accordion-button:focus {
+  border-color: inherit;
+  box-shadow: none;
 }
 
 /* field-nav styling */
