--- a/app/templates/fertilizers.html
+++ b/app/templates/fertilizers.html
@@ -61,7 +61,7 @@
               {{ fert.unit.value + "/ha" }}
             </td>
             <td class="d-print-none">
-              <button class="btn btn-link p-0"
+              <button class="btn btn-link btn-edit"
                       type="button"
                       data-bs-toggle="modal"
                       data-bs-target="#modal"
@@ -189,7 +189,7 @@
               {{ fert.unit.value + "/ha" }}
             </td>
             <td class="d-print-none">
-              <button class="btn btn-link p-0"
+              <button class="btn btn-link btn-edit"
                       type="button"
                       data-bs-toggle="modal"
                       data-bs-target="#modal"
