Change field nav-tab to show basefield list

--- a/app/templates/fields.html
+++ b/app/templates/fields.html
@@ -2,73 +2,89 @@
 
 {% block app_content %}
   <div class="container">
-    <button class="btn btn-success fw-500 d-print-none"
+    <button class="btn btn-sm btn-success fw-500 d-print-none"
             type="button"
             data-bs-toggle="modal"
             data-bs-target="#modal"
-            data-form="field"
+            data-form="basefield"
             data-modal="new">
       ✚ New
     </button>
-    <table class="table table-sm table-hover caption-top align-middle no-border-top">
-      <caption>List of base fields</caption>
-      <thead class="no-border-top">
-      </thead>
-      <tbody>
-        {% for base_field in base_fields %}
-          <tbody class="header no-border-top" style="cursor: pointer;">
-            <tr data-id="{{ base_field.id }}">
-              <th colspan="7">
-                <span>+</span>
+    <p class="my-2">List of base fields</p>
+    {% for base_field in base_fields %}
+      <div class="accordion">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#base{{ loop.index }}"
+                    data-id="{{ base_field.id }}">
+              <strong>
                 {{ "{prefix:02}-{suffix} {name}".format(prefix=base_field.prefix, suffix=base_field.suffix, name=base_field.name) }}
+              </strong>
+              <i class="btn-edit fa-solid fa-pencil ms-2"
+                 data-bs-toggle="modal"
+                 data-bs-target="#modal"
+                 data-form="basefield"
+                 data-modal="edit"></i>
+            </button>
+          </h2>
+          <div class="accordion-collapse collapse" id="base{{ loop.index }}">
+            <div class="accordion-body pt-0">
+              <table class="table table-sm table-hover">
+                <thead>
+                  <tr>
+                    <th scope="col">Year</th>
+                    <th scope="col">Area</th>
+                    <th scope="col">Type</th>
+                    <th scope="col">Demand</th>
+                    <th scope="col">Red region</th>
+                    <th scope="col"></th>
+                  </tr>
+                </thead>
+                {% for field in base_field.fields %}
+                  <tbody>
+                    <tr>
+                      <th scope="row" data-field-id="{{ field.id }}">{{ field.year }}</th>
+                      <td>{{ field.area }}</td>
+                      <td>{{ field.field_type.value }}</td>
+                      <td>{{ field.demand_type.value }}</td>
+                      <td>
+                        {% if field.red_region %}
+                          <i class="fa-solid fa-check fa-fw"></i>
+                        {% else %}
+                          <i class="fa-solid fa-xmark fa-fw"></i>
+                        {% endif %}
+                      </td>
+                      <td class="table-action d-print-none">
+                        <button class="btn btn-link btn-edit"
+                                type="button"
+                                data-bs-toggle="modal"
+                                data-bs-target="#modal"
+                                data-form="field"
+                                data-modal="edit">
+                          <i class="fa-solid fa-pencil"></i>
+                        </button>
+                      </td>
+                    </tr>
+                  </tbody>
+                {% endfor %}
+              </table>
+              <button class="btn btn-sm btn-success fw-500 d-print-none"
+                      type="button"
+                      data-bs-toggle="modal"
+                      data-bs-target="#modal"
+                      data-form="field"
+                      data-modal="new">
+                ✚ New
+              </button>
+            </div>
+          </div>
+        </div>
+      {% endfor %}
+    </div>
 
-              </th>
-            </tr>
-          </tbody>
-          <thead class="no-border-top collapse">
-            <tr>
-              <th class="table-action"></th>
-              <th scope="col">Year</th>
-              <th scope="col">Area</th>
-              <th scope="col">Type</th>
-              <th scope="col">Demand</th>
-              <th scope="col">Red region</th>
-              <th></th>
-            </tr>
-          </thead>
-          {% for field in base_field.fields %}
-            <tbody class="no-border-top collapse">
-              <tr>
-                <td></td>
-                <th scope="row" data-field-id="{{ field.id }}">{{ field.year }}</th>
-                <td>{{ field.area }}</td>
-                <td>{{ field.field_type.value }}</td>
-                <td>{{ field.demand_type.value }}</td>
-                <td>
-                  {% if field.red_region %}
-                    <i class="fa-solid fa-check fa-fw"></i>
-                  {% else %}
-                    <i class="fa-solid fa-xmark fa-fw"></i>
-                  {% endif %}
-                </td>
-                <td class="table-action d-print-none">
-                  <button class="btn btn-link p-0"
-                          type="button"
-                          data-bs-toggle="modal"
-                          data-bs-target="#modal"
-                          data-form="crop"
-                          data-modal="edit">
-                    <i class="fa-solid fa-pencil"></i>
-                  </button>
-                </td>
-              </tr>
-            </tbody>
-          {% endfor %}
-        {% endfor %}
-      </tbody>
-    </table>
-  </div>
+    <script src="{{ url_for('static', filename='js/fields.js') }}"></script>
 
-  <script src="{{ url_for('static', filename='js/fields.js') }}"></script>
-
-{% endblock app_content %}
+  {% endblock app_content %}
