--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -5,6 +5,8 @@ html {
 
 :root {
   --content-height: calc(100vh - 57px);
+  --green: #198754;
+  --teal: #20c997;
   --green-40: #24c278;
   --green-50: #20ac6b;
 }
@@ -37,12 +39,6 @@ main {
   font-weight: 500;
 }
 
-.table-action {
-  white-space: nowrap;
-  width: 1em;
-  padding: 0 !important;
-}
-
 .no-border-top {
   border-top: 0px solid currentColor !important;
 }
@@ -60,13 +56,33 @@ main {
 }
 
 .bg-green {
-  background-color: var(--bs-green) !important;
+  background-color: var(--green) !important;
 }
+
+/* table styling */
+.table-action {
+  white-space: nowrap;
+  width: 1em;
+  padding: 0 !important;
+}
+
+.table > tbody {
+  border-top: 0px solid currentColor !important;
+}
+
+/* .table>:not(:first-child) {
+  border-top: 1px solid var(--bs-gray-400);
+} */
 
 /* edit button hover  */
 .btn-edit {
+  color: var(--bs-primary);
   display: none;
   padding: 0 !important;
+}
+
+button:hover .btn-edit {
+  display: inline-block;
 }
 
 tr:hover .btn-edit {
