--- a/app/templates/crops.html
+++ b/app/templates/crops.html
@@ -63,7 +63,7 @@
           </td>
           <td>{{ crop.legume_rate.value }}</td>
           <td>
-            {{ crop.nmin_depth }}
+            {{ crop.nmin_depth.value }}
           </td>
           <td>
             {{ crop.target_demand }}
