--- a/app/templates/modal_content.html
+++ b/app/templates/modal_content.html
@@ -1,6 +1,6 @@
 {% from "utils.html" import render_form %}
 
-<div class="modal-header">
+<div class="modal-header px-4">
   <h5 class="modal-title" id="modalLabel">Edit {{ modal_type }}</h5>
   <button type="button"
           class="btn-close"
@@ -10,11 +10,20 @@
 <div class="modal-body">
   <div class="container-fluid">{{ render_form(form, form_type="floating", id="modalForm") }}</div>
 </div>
-<div class="modal-footer">
-  <input class="btn btn-success"
-         type="submit"
-         for="submit"
-         form="modalForm"
-         value="Save changes"/>
-  <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+<div class="modal-footer px-4">
+  <ul class="ps-0">
+    <input class="btn btn-danger"
+           type="submit"
+           for="submit"
+           form="modalForm"
+           value="Delete"/>
+  </ul>
+  <ul class="ms-auto">
+    <input class="btn btn-success"
+           type="submit"
+           for="submit"
+           form="modalForm"
+           value="Save"/>
+    <button type="button" class="btn btn-secondary ms-1" data-bs-dismiss="modal">Close</button>
+  </ul>
 </div>
